tests/negative/neg_rule3_variable.safe
-- Test: neg_rule3_variable
-- Description: Division by a variable computed at runtime without nonzero proof.
--   The divisor is the result of a subtraction that may yield zero.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p134:90a17a3b
-- Expected: REJECT division_by_zero

package Variable_Div_Test is

   type Value is range 0 .. 1000;

   --  Ratio: computes A / (B - C), but B - C may be zero when B = C.
   function Ratio (A, B, C : Value) return Integer is
   begin
      return Integer (A) / (Integer (B) - Integer (C));  -- ERROR: B - C may be zero
   end Ratio;

end Variable_Div_Test;
